<ui version="4.0" >
 <class>TTCutOutFrameWidget</class>
 <widget class="QWidget" name="TTCutOutFrameWidget" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>453</width>
    <height>397</height>
   </rect>
  </property>
  <property name="sizePolicy" >
   <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
    <horstretch>1</horstretch>
    <verstretch>4</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize" >
   <size>
    <width>280</width>
    <height>328</height>
   </size>
  </property>
  <property name="windowTitle" >
   <string>Form</string>
  </property>
  <layout class="QGridLayout" >
   <property name="leftMargin" >
    <number>0</number>
   </property>
   <property name="topMargin" >
    <number>0</number>
   </property>
   <property name="rightMargin" >
    <number>0</number>
   </property>
   <property name="bottomMargin" >
    <number>0</number>
   </property>
   <property name="horizontalSpacing" >
    <number>0</number>
   </property>
   <property name="verticalSpacing" >
    <number>0</number>
   </property>
   <item row="0" column="0" >
    <widget class="QGroupBox" name="gbCutOutFrame" >
     <property name="sizePolicy" >
      <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
       <horstretch>4</horstretch>
       <verstretch>10</verstretch>
      </sizepolicy>
     </property>
     <property name="sizeIncrement" >
      <size>
       <width>0</width>
       <height>4</height>
      </size>
     </property>
     <property name="title" >
      <string>Cut out frame</string>
     </property>
     <layout class="QGridLayout" >
      <property name="leftMargin" >
       <number>4</number>
      </property>
      <property name="topMargin" >
       <number>4</number>
      </property>
      <property name="rightMargin" >
       <number>4</number>
      </property>
      <property name="bottomMargin" >
       <number>4</number>
      </property>
      <property name="horizontalSpacing" >
       <number>4</number>
      </property>
      <property name="verticalSpacing" >
       <number>4</number>
      </property>
      <item row="0" column="0" >
       <widget class="TTMPEG2Window" name="mpegWindow" >
        <property name="sizePolicy" >
         <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
          <horstretch>0</horstretch>
          <verstretch>4</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize" >
         <size>
          <width>100</width>
          <height>100</height>
         </size>
        </property>
        <property name="frameShape" >
         <enum>QFrame::Panel</enum>
        </property>
        <property name="frameShadow" >
         <enum>QFrame::Plain</enum>
        </property>
       </widget>
      </item>
      <item row="1" column="0" >
       <layout class="QHBoxLayout" >
        <property name="spacing" >
         <number>4</number>
        </property>
        <property name="leftMargin" >
         <number>0</number>
        </property>
        <property name="topMargin" >
         <number>0</number>
        </property>
        <property name="rightMargin" >
         <number>0</number>
        </property>
        <property name="bottomMargin" >
         <number>0</number>
        </property>
        <item>
         <widget class="QLabel" name="laCutOutFramePosition" >
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize" >
           <size>
            <width>0</width>
            <height>24</height>
           </size>
          </property>
          <property name="maximumSize" >
           <size>
            <width>16777215</width>
            <height>24</height>
           </size>
          </property>
          <property name="text" >
           <string>00:00:00,000 (000000)</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pbPrevCutOutFrame" >
          <property name="enabled" >
           <bool>true</bool>
          </property>
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize" >
           <size>
            <width>45</width>
            <height>24</height>
           </size>
          </property>
          <property name="maximumSize" >
           <size>
            <width>45</width>
            <height>24</height>
           </size>
          </property>
          <property name="text" >
           <string/>
          </property>
          <property name="icon" >
           <iconset resource="cutoutframewidget.qrc" >:/pixmaps/pixmaps/prev_18.xpm</iconset>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pbNextCutOutFrame" >
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize" >
           <size>
            <width>45</width>
            <height>24</height>
           </size>
          </property>
          <property name="maximumSize" >
           <size>
            <width>45</width>
            <height>24</height>
           </size>
          </property>
          <property name="text" >
           <string/>
          </property>
          <property name="icon" >
           <iconset resource="cutoutframewidget.qrc" >:/pixmaps/pixmaps/next_18.xpm</iconset>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pbSearchFrame" >
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize" >
           <size>
            <width>80</width>
            <height>24</height>
           </size>
          </property>
          <property name="maximumSize" >
           <size>
            <width>80</width>
            <height>24</height>
           </size>
          </property>
          <property name="text" >
           <string>Search</string>
          </property>
          <property name="icon" >
           <iconset resource="cutoutframewidget.qrc" >:/pixmaps/pixmaps/search_18.xpm</iconset>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>TTMPEG2Window</class>
   <extends>QFrame</extends>
   <header>../mpeg2window/ttmpeg2window.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="cutoutframewidget.qrc" />
 </resources>
 <connections/>
</ui>
